Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.0.0
-
None
Description
Steps to reproduce:
- open clean QC repository
- configure project with one kit
- while codemodel is parsing switch to Projects
- open the Qmake-call Details
- add BUILD_TESTS=1
- switch back to Editor [codemodel parsing will be stopped internally and triggered again]
- codemodel parsing seems to be faster than usual
- after codemodel parsing has finished Scanning for Tests should appear
- opening the Tests tree reveals only some tests or none at all [depends on how far the codemodel was while parsing the first time]
Attachments
For Gerrit Dashboard: QTCREATORBUG-16134 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
156943,3 | CppTools: Fix incompletely indexed project | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |