src/plugins/cpptools/cppmodelmanager.h
@@ -206,6 +206,7 @@ private:
     void initializeBuiltinModelManagerSupport();
     void delayedGC();
     void recalculateProjectPartMappings();
+    void watchForCanceledProjectIndexer(QFuture<void> future, ProjectExplorer::Project *project);
 
     void replaceSnapshot(const CPlusPlus::Snapshot &newSnapshot);
     void removeFilesFromSnapshot(const QSet<QString> &removedFiles);
